# PolyEngineInfer

./: .gitignore  LICENSE  NOTICE  README.md  build.gradle.kts  settings.gradle.kts  spotless.gradle
api/: build.gradle.kts
api/src/main/java/dev/filipfan/polyengineinfer/api/: LlmInferenceEngine.kt  LlmInferenceOptions.kt  LlmModelFiles.kt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/filipfan/polyengineinfer/: MainActivity.kt
app/src/main/res/mipmap-anydpi/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
executorch/: build.gradle.kts
executorch/src/androidTest/assets/: README.md
executorch/src/androidTest/java/dev/filipfan/polyengineinfer/executorch/: ExecuTorchInferenceTest.kt
executorch/src/main/java/dev/filipfan/polyengineinfer/executorch/: ExecuTorchInference.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
keystore/: pei_keystore.jks
licenses/: LICENSE-llamacpp
llamacpp/: build.gradle.kts
llamacpp/src/androidTest/assets/: README.md
llamacpp/src/androidTest/assets/tiny-mistral-test-GGUF/: tiny-mistral-test-Q2_K.gguf
llamacpp/src/androidTest/java/dev/filipfan/polyengineinfer/llamacpp/: LlamaCppInferenceTest.kt
llamacpp/src/main/cpp/: CMakeLists.txt  llama-android.cpp
llamacpp/src/main/java/dev/filipfan/polyengineinfer/llamacpp/: LlamaCppInference.kt
mediapipe/: build.gradle.kts
onnx/: build.gradle.kts
onnx/src/androidTest/assets/: README.md
(+23 files in other folders)
